---------------------------------------------------------------------------------------------------
Version: 0.18.1
Date: 30. 05. 2020
  Bugfixes:
    - Fixed crashes on load and creation as well as serveral others
---------------------------------------------------------------------------------------------------
Version: 0.18.0
Date: 23. 01. 2020
  Features:
    - Updated for Factorio 0.18
  Bugfixes:
    - Fixed crash when an item saved in a preset is removed from the game
---------------------------------------------------------------------------------------------------
Version: 0.17.4
Date: 21. 05. 2019
  Features:
    - Presets can be applied to a logistic chest by opening the chest and using the load preset button
  Bugfixes:
    - Fixed potential crash when an inventory's entity was invalidated
---------------------------------------------------------------------------------------------------
Version: 0.17.3
Date: 06. 04. 2019
  Features:
    - Blueprints can now be dropped straight onto an inventory logistic slot to request them
    - Added the ability to request a blueprint into a logistics chest by placing the blueprint in one of its request slots.
---------------------------------------------------------------------------------------------------
Version: 0.17.2
Date: 05. 04. 2019
  Changes:
    - Display requested item counts in preset gui
    - Requesting a blueprint will add to your requests rather than overwriting them
    - Reworked gui internals to make future changes easier
  Bugfixes:
    - Fix presets loading incorrectly if a duplicate item was already being requested
---------------------------------------------------------------------------------------------------
Version: 0.17.1
Date: 02. 04. 2019
  Changes:
    - Minor GUI update to display longer preset names
---------------------------------------------------------------------------------------------------
Version: 0.17.0
Date: 02. 04. 2019
  Features:
    - Initial Release